<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewnodelcustomerdetail"
            type="com.cbo.customer.usecase.CustomerViewModelDetails" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/customer_detail_clayoutCustomer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.cbo.customer.ui.CustomerDetail">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toStartOf="@+id/customer_detail_ciPhoto"
            app:layout_constraintStart_toStartOf="@+id/customer_detailglLeft"
            app:layout_constraintTop_toTopOf="@+id/customer_detailglTop">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:background="@color/cd_color_fondo_2"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/customer_detail_tvId"
                    style="@style/customer_detail_tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ID: " />

                <TextView
                    android:id="@+id/customer_detail_tvIdCustomer"
                    style="@style/customer_detail_tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@{viewnodelcustomerdetail.idCustomer}" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/customer_detail_cardNombre"
            style="@style/cvCustomerDetailCornerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cd_cv_marginTop"
            app:cardCornerRadius="@dimen/cd_radius_cv"
            app:cardElevation="@dimen/cd_cardElevation_cv"
            app:layout_constraintEnd_toStartOf="@+id/customer_detailglRight"
            app:layout_constraintStart_toStartOf="@+id/customer_detailglLeft"
            app:layout_constraintTop_toBottomOf="@+id/customer_detail_ciPhoto">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/customer_detail_clTableA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <LinearLayout
                    android:id="@+id/customer_detail_llName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cd_color_fondo_1"
                    android:orientation="vertical"
                    android:padding="@dimen/cd_LinearLayout_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/customer_detail_tvName"
                        style="@style/customer_detail_tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cd_tvName" />

                    <TextView
                        android:id="@+id/customer_detail_tvNameCustomer"
                        style="@style/customer_detail_tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@{viewnodelcustomerdetail.nameCustomer}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/customer_detail_llEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cd_color_fondo_2"
                    android:orientation="vertical"
                    android:padding="@dimen/cd_LinearLayout_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customer_detail_llName">

                    <TextView
                        android:id="@+id/customer_detail_tvEmail"
                        style="@style/customer_detail_tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cd_tvEmail" />

                    <TextView
                        android:id="@+id/customer_detail_tvEmailCustomer"
                        style="@style/customer_detail_tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@{viewnodelcustomerdetail.emailCustomer}" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/customer_detail_cardLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cd_cv_marginTop"
            app:cardCornerRadius="@dimen/cd_radius_cv"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:layout_constraintEnd_toStartOf="@+id/customer_detailglRight"
            app:layout_constraintStart_toStartOf="@+id/customer_detailglLeft"
            app:layout_constraintTop_toBottomOf="@+id/customer_detail_cardNombre">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/customer_detail_clTableB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/customer_detail_llPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cd_color_fondo_1"
                    android:orientation="vertical"
                    android:padding="@dimen/cd_LinearLayout_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/customer_detail_tvPhone"
                        style="@style/customer_detail_tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cd_tvPhone" />

                    <TextView
                        android:id="@+id/customer_detail_tvPhoneCustomer"
                        style="@style/customer_detail_tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@{viewnodelcustomerdetail.phoneCustomer}" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/customer_detail_llAdress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cd_color_fondo_2"
                    android:orientation="vertical"
                    android:padding="@dimen/cd_LinearLayout_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customer_detail_llPhone">

                    <TextView
                        android:id="@+id/customer_detail_tvAddress"
                        style="@style/customer_detail_tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/cd_tvAddress" />

                    <TextView
                        android:id="@+id/customer_detail_tvAddressCustomer"
                        style="@style/customer_detail_tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewnodelcustomerdetail.addressCustomer}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/customer_detail_llCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cd_color_fondo_1"
                    android:orientation="vertical"
                    android:padding="@dimen/cd_LinearLayout_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/customer_detail_llAdress">

                    <TextView
                        android:id="@+id/customer_detail_tvCity"
                        style="@style/customer_detail_tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cd_tvCity" />

                    <TextView
                        android:id="@+id/customer_detail_tvCityName"
                        style="@style/customer_detail_tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@{viewnodelcustomerdetail.cityCustomer}" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/customer_detail_ciPhoto"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/cd_height_ivCustomer"
            android:src="@drawable/kiwituxedo"
            app:civ_border_color="@color/seed"
            app:civ_border_width="@dimen/customer_border_ivCustomer"
            app:layout_constraintEnd_toStartOf="@+id/customer_detailglRight"
            app:layout_constraintStart_toStartOf="@+id/customer_detailglLeft"
            app:layout_constraintTop_toTopOf="@+id/customer_detailglTop" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/customer_detailglRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/customer_detailglLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/customer_detailglTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/customer_detail_flbtncorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cd_general_margin"
            android:clickable="true"
            android:contentDescription="@string/cd_cd_flbtnCorrect"
            android:focusable="true"
            app:backgroundTint="@color/customer_color_floatingbutton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/customer_detailglRight"
            app:srcCompat="@drawable/ic_action_correct" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>